Fixed align of profile page and console error and warnings

--- a/src/screens/header/header.css
+++ b/src/screens/header/header.css
@@ -53,8 +53,11 @@
 }
 
 .popup-container li:nth-child(1) {
-    border-bottom: 1px solid black;
     padding: 5px;
+}
+
+.border-btm {
+    border-bottom: 1px solid black;
 }
 
 .popup-container li:nth-child(2) {
